@@ -12,10 +12,8 @@ int main (void)
   UniChar ubuffer[] = { 'O', 'K', '!', 0 };
   
   str1 = CFStringCreateWithBytes (NULL, "OK", 2, kCFStringEncodingASCII, false);
-  CFShowStr(str1);
   
   str2 = CFStringCreateWithBytes (NULL, (const UInt8*)ubuffer, 2 * sizeof(UniChar), kCFStringEncodingUTF16LE, false);
-  CFShowStr(str2);
   
   PASS_CFEQ(str1, str2, "Unicode and C-string are equal.");
   
