@@ -16,7 +16,7 @@ int main (void)
   
   str1 = CFStringCreateWithFormat (NULL, NULL,
     __CFStringMakeConstantString("'%2$04d %d'"), 3, 0x00a4);
-  str2 = __CFStringMakeConstantString ("' 164 3'");
+  str2 = __CFStringMakeConstantString ("'0164 3'");
   PASS_CFEQ(str1, str2, "Integers are formatted correctly");
   CFRelease(str1);
   CFRelease(str2);
